--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,20 @@
+name = "SimpleStatics"
+uuid = "755f8035-bddb-4884-b09e-b908b7adad44"
+authors = ["Will <William.joseph.box@gmail.com> and contributors"]
+version = "0.1.0"
+
 [deps]
 GraphRecipes = "bd48cda9-67a9-57be-86fa-5b3c104eda73"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Luxor = "ae8d54c2-7ccd-5906-9d76-62fc9837b5bc"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+
+[compat]
+julia = "1"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
