--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,14 @@
 name = "SimpleStatics"
 uuid = "755f8035-bddb-4884-b09e-b908b7adad44"
 authors = ["Will <William.joseph.box@gmail.com> and contributors"]
-version = "0.1.0"
+version = "1.0.0"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Luxor = "ae8d54c2-7ccd-5906-9d76-62fc9837b5bc"
 
 [compat]
+Luxor = "3"
 julia = "1"
 
 [extras]
